Remove additional modules